--- a/index.html
+++ b/index.html
@@ -298,6 +298,18 @@
       </header>
 
       <main id="main" class="main">
+        <!-- home-top-banner -->
+        <ins
+          class="adsbygoogle"
+          style="display: block"
+          data-ad-client="ca-pub-3737993240349250"
+          data-ad-slot="9118243122"
+          data-ad-format="auto"
+          data-full-width-responsive="true"
+        ></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
         <div class="main-inner">
           <div class="content-wrap">
             <div id="content" class="content">
